# skstuner

./: .env.example  .gitignore  CHANGELOG.md  README.md  download-sks.sh  generate-data.sh  process-sks.sh  pyproject.toml  run-tests.sh  setup.sh  train-model.sh  validate-data.sh
docs/plans/: 2025-11-07-sks-classification-system.md
models/configs/: gemma_7b.yaml  phi3_mini.yaml  xlm_roberta_large.yaml
scripts/: download_sks.py  generate_synthetic_data.py  process_sks.py  train_model.py  validate_synthetic_data.py
src/skstuner/: config.py
src/skstuner/data/: __init__.py  checkpoint_manager.py  llm_providers.py  prompt_templates.py  quality_validator.py  sks_downloader.py  sks_parser.py  sks_processor.py  synthetic_generator.py
src/skstuner/data/templates/: clinical_note.jinja2
src/skstuner/training/: __init__.py  dataset.py  metrics.py  model.py  trainer.py
src/skstuner/utils/: __init__.py  logging_config.py
tests/: test_config.py
tests/data/: test_checkpoint_manager.py  test_prompt_templates.py  test_quality_validator.py  test_sks_downloader.py  test_sks_parser.py  test_sks_processor.py  test_synthetic_generator.py
tests/data/fixtures/: sample_sks.txt
tests/training/: test_dataset.py  test_metrics.py  test_model.py
