[tool.poetry]
name = "skstuner"
version = "0.1.0"
description = "SKS code classification using fine-tuned LLMs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "skstuner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies for data processing
python-dotenv = "^1.0.0"
pyyaml = "^6.0.0"
click = "^8.1.0"
requests = "^2.31.0"
jinja2 = "^3.1.0"
anthropic = "^0.25.0"

# Model training dependencies
torch = "^2.1.0"
transformers = "^4.36.0"
peft = "^0.7.0"
datasets = "^2.16.0"
pandas = "^2.1.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
tqdm = "^4.66.0"
accelerate = "^0.25.0"

# Optional: Future API service dependencies (not currently used)
# Uncomment when implementing API:
# fastapi = "^0.109.0"
# uvicorn = {extras = ["standard"], version = "^0.27.0"}
# pydantic = "^2.5.0"
# httpx = "^0.26.0"

# Optional: Experiment tracking (not currently used)
# Uncomment when needed:
# wandb = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
ipython = "^8.12.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
